2009-06-16  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/exif-display/exif-display-config.ui:
	Mark empty labels untranslatable.

2009-06-16  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/exif-display/Makefile.am:
	* plugins/exif-display/eog-exif-display-plugin.c:
	Don't install UI files into the plugins folder directly.

2009-06-12  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/exif-display/eog-exif-display-plugin.c
	(_eog_util_make_valid_utf8), (eog_exif_set_label):
	Duplicate eog_util_make_valid_utf8 into the plugin as it is not
	exported anymore by the current eog version.

2009-06-12  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/exif-display/Makefile.am:
	* plugins/exif-display/eog-exif-display-plugin.c:
	* plugins/exif-display/eog-exif-display-plugin.h:
	* plugins/exif-display/exif-display-config.ui:
	* plugins/exif-display/exif-display.eog-plugin.desktop.in:
	* plugins/exif-display/exif-display.ui:
	* configure.ac:
	Add exif-display plugin by Emmanuel Touzery.

2009-05-05  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac: Make --with-plugins parameter appear nice with a list
	of the included plugins.

2009-05-05  Felix Riemann  <friemann@svn.gnome.org>

	* autogen.sh:
	* configure.ac:
	Match required build tool version in autogen.sh and configure.ac.

2009-04-27  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/fit-to-width/eog-fit-to-width-plugin.c:
	* plugins/postr/eog-postr-plugin.c:
	Remove trailing whitespaces.

2009-04-27  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/fit-to-width/eog-fit-to-width-plugin.c
	(eog_fit_to_width_plugin_class_init):
	Remove unused functions from fit-to-width plugin.

2009-04-27  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/fit-to-width/Makefile.am:
	* plugins/fit-to-width/eog-fit-to-width-plugin.c:
	* plugins/fit-to-width/eog-fit-to-width-plugin.h:
	* plugins/fit-to-width/fit-to-width.eog-plugin.desktop.in: