@@ -1,3 +1,9 @@
+2009-06-27  Felix Riemann  <friemann@gnome.org>
+
+	* plugins/exif-display/eog-exif-display-plugin.c:
+	* plugins/slideshowshuffle/slideshowshuffle.py:
+	Strip trailing whitespaces.
+
 2009-06-16  Felix Riemann  <friemann@svn.gnome.org>
 
 	* plugins/exif-display/exif-display-config.ui:
